DrawFocusRect() may cause an assertion failure

XMLWordPrintable

    • b06
    • x86, x86_64
    • windows

        With the fast debug configuration, the `api/java_awt/awt_focus_subsystem/event_delivery/index.html#EventDelivery2` test is hanging when run on Windows with JDK 8 or 11. Although not explicit when running the test through the CLI, the cause is this (1) assertion failing. When running with the test harness GUI, we see a popup with the assertion failure (see attached). By ignoring the assertion (pressing “No”), the tests all pass.

        Goal: determine why the assertion is failing and address the cause. Afterwards this test should no longer hang when run from the CLI.

        Steps to reproduce
        * Pull the relevant OpenJDK source (11 or 8)
        * Install the necessary build dependencies
        * Build with `--enable-debug`
        * Pull jck.jar and unpack it
        * Run the `api/java_awt/awt_focus_subsystem/event_delivery/index.html#EventDelivery2` test (either through CLI or test harness)

        (1) https://github.com/openjdk/jdk11u-dev/blob/master/src/java.desktop/windows/native/libawt/windows/awt_Button.cpp#L246

              Assignee:
              Dmitry Markov
              Reporter:
              Satyen Subramaniam
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: