8346887: DrawFocusRect() may cause an assertion failure

Reviewed-by: phh, serb
Backport-of: 8eddf67c82a2af4d704c4063ad802640770b3c26